{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 296,
  "lineage": "485bf364-29b3-13ee-1dc9-7ce47fe2ec99",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "db_network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "192.168.5.1",
            "id": "projects/ctdc-demo/regions/us-east4/subnetworks/ctdc-us-east4-dev-db-network",
            "ip_cidr_range": "192.168.5.0/28",
            "name": "ctdc-us-east4-dev-db-network",
            "network": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/networks/ctdc-network",
            "private_ip_google_access": true,
            "project": "ctdc-demo",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/regions/us-east4/subnetworks/ctdc-us-east4-dev-db-network"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.10.0.1",
            "id": "projects/ctdc-demo/regions/us-east4/subnetworks/ctdc-us-east4-dev-gke-network",
            "ip_cidr_range": "10.10.0.0/16",
            "name": "ctdc-us-east4-dev-gke-network",
            "network": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/networks/ctdc-network",
            "private_ip_google_access": true,
            "project": "ctdc-demo",
            "region": "us-east4",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.121.44.0/22",
                "range_name": "gke-demo-dev-gke-services-9ad9ee10"
              },
              {
                "ip_cidr_range": "10.121.0.0/20",
                "range_name": "gke-demo-dev-gke-pods-9ad9ee10"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/regions/us-east4/subnetworks/ctdc-us-east4-dev-gke-network"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "mgmt_network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "172.16.1.1",
            "id": "projects/ctdc-demo/regions/us-east4/subnetworks/ctdc-us-east4-dev-mgmt-network",
            "ip_cidr_range": "172.16.1.0/24",
            "name": "ctdc-us-east4-dev-mgmt-network",
            "network": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/networks/ctdc-network",
            "private_ip_google_access": true,
            "project": "ctdc-demo",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/regions/us-east4/subnetworks/ctdc-us-east4-dev-mgmt-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat_ips",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "db-network",
          "schema_version": 0,
          "attributes": {
            "address": "35.245.145.46",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-08-23T22:25:02.196-07:00",
            "id": "projects/ctdc-demo/regions/us-east4/addresses/db-network-nat-ip",
            "name": "db-network-nat-ip",
            "network_tier": "PREMIUM",
            "project": "ctdc-demo",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/regions/us-east4/addresses/db-network-nat-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/ctdc-demo/regions/us-east4/routers/ctdc-nat-router"
            ]
          }
        },
        {
          "index_key": "gke-network",
          "schema_version": 0,
          "attributes": {
            "address": "35.245.228.49",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-08-23T22:25:02.206-07:00",
            "id": "projects/ctdc-demo/regions/us-east4/addresses/gke-network-nat-ip",
            "name": "gke-network-nat-ip",
            "network_tier": "PREMIUM",
            "project": "ctdc-demo",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/regions/us-east4/addresses/gke-network-nat-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/ctdc-demo/regions/us-east4/routers/ctdc-nat-router"
            ]
          }
        },
        {
          "index_key": "mgmt-network",
          "schema_version": 0,
          "attributes": {
            "address": "35.245.23.76",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-08-23T22:25:02.217-07:00",
            "id": "projects/ctdc-demo/regions/us-east4/addresses/mgmt-network-nat-ip",
            "name": "mgmt-network-nat-ip",
            "network_tier": "PREMIUM",
            "project": "ctdc-demo",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/regions/us-east4/addresses/mgmt-network-nat-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/ctdc-demo/regions/us-east4/routers/ctdc-nat-router"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-08-23T22:25:24.365-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ctdc-demo/global/firewalls/ctdc-allow-internal",
            "log_config": [],
            "name": "ctdc-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/networks/ctdc-network",
            "priority": 1000,
            "project": "ctdc-demo",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/firewalls/ctdc-allow-internal",
            "source_ranges": [
              "10.10.0.0/16",
              "172.16.1.0/24",
              "192.168.5.0/28"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-pod-db",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "7474"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-08-23T22:25:24.341-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ctdc-demo/global/firewalls/ctdc-allow-neo4j-to-db",
            "log_config": [],
            "name": "ctdc-allow-neo4j-to-db",
            "network": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/networks/ctdc-network",
            "priority": 1000,
            "project": "ctdc-demo",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/firewalls/ctdc-allow-neo4j-to-db",
            "source_ranges": [
              "10.8.0.0/28"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh-from-bastion-to-db",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "7473",
                  "7474",
                  "7687"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-08-23T22:25:24.480-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ctdc-demo/global/firewalls/ctdc-dev-allow-ssh-from-bastion-to-db",
            "log_config": [],
            "name": "ctdc-dev-allow-ssh-from-bastion-to-db",
            "network": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/networks/ctdc-network",
            "priority": 1000,
            "project": "ctdc-demo",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/firewalls/ctdc-dev-allow-ssh-from-bastion-to-db",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "db"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh-to-bastion",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-08-23T22:25:24.336-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ctdc-demo/global/firewalls/ctdc-dev-allow-ssh-to-bastion",
            "log_config": [],
            "name": "ctdc-dev-allow-ssh-to-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/networks/ctdc-network",
            "priority": 1000,
            "project": "ctdc-demo",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/firewalls/ctdc-dev-allow-ssh-to-bastion",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh-to-db-from-bastion",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "7473",
                  "7474",
                  "7687"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-08-23T22:25:24.478-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ctdc-demo/global/firewalls/ctdc-dev-allow-ssh-to-db-from-bastion",
            "log_config": [],
            "name": "ctdc-dev-allow-ssh-to-db-from-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/networks/ctdc-network",
            "priority": 1000,
            "project": "ctdc-demo",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/firewalls/ctdc-dev-allow-ssh-to-db-from-bastion",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "bastion"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_neo4j_http",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "7474"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-08-23T22:25:24.454-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ctdc-demo/global/firewalls/ctdc-allow-neo4j-http",
            "log_config": [],
            "name": "ctdc-allow-neo4j-http",
            "network": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/networks/ctdc-network",
            "priority": 1000,
            "project": "ctdc-demo",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/firewalls/ctdc-allow-neo4j-http",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "db"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.96.126.229",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-08-23T22:25:02.057-07:00",
            "id": "projects/ctdc-demo/global/addresses/web-frontend-ip",
            "name": "web-frontend-ip",
            "prefix_length": 0,
            "project": "ctdc-demo",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/addresses/web-frontend-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider.google",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20200811",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/zones/us-east4-a/disks/ctdc-bastion-host"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ctdc-demo/zones/us-east4-a/instances/ctdc-bastion-host",
            "instance_id": "266999397209794308",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "bento:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCw1CNYgCu0Om0snRGTGqXYKkY5S2bWZkWBLfEjOixnMcQ3YEAAkdSb6lNEHUbb7qa5ULk/WpS9z0GVu3rzAuFef/GbezXH/pfiRTnt504PP0FfOKxtaMzTBiS5/MquccnKRWK07VYMGEP86Flxhg79yGbOLYMlPj58/BKfS3s85f86jUc1MJXckTJN1v8jrr2hBvfNl3Gqm8yIzI2mryAP9M3YaN3wUygEAEV8rl60ymc2WVjaax2tDdU8G2HlQzOHTfNagK0wauRV0QMrmj3WjHNB+sRSuK1gRwXfikHBM9IdTwNIpuJTV6n61nW9dtUq1QXFzXEhWEN4j13l7Y31 donkorvn@NCI-02134127-ML\n"
            },
            "metadata_fingerprint": "RGmKZmKBsIA=",
            "name": "ctdc-bastion-host",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.199.27.51",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/networks/ctdc-network",
                "network_ip": "172.16.1.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/regions/us-east4/subnetworks/ctdc-us-east4-dev-mgmt-network",
                "subnetwork_project": "ctdc-demo"
              }
            ],
            "project": "ctdc-demo",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/zones/us-east4-a/instances/ctdc-bastion-host",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "zone": "us-east4-a"
          },
          "dependencies": [
            "google_compute_instance.neo4j",
            "google_compute_subnetwork.subnet",
            "local_file.deploy_script"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "neo4j",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20200811",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/zones/us-east4-a/disks/ctdc-dev-database"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/ctdc-demo/zones/us-east4-a/instances/ctdc-dev-database",
            "instance_id": "8878987353489600948",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata": {
              "ssh-keys": "bento:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCw1CNYgCu0Om0snRGTGqXYKkY5S2bWZkWBLfEjOixnMcQ3YEAAkdSb6lNEHUbb7qa5ULk/WpS9z0GVu3rzAuFef/GbezXH/pfiRTnt504PP0FfOKxtaMzTBiS5/MquccnKRWK07VYMGEP86Flxhg79yGbOLYMlPj58/BKfS3s85f86jUc1MJXckTJN1v8jrr2hBvfNl3Gqm8yIzI2mryAP9M3YaN3wUygEAEV8rl60ymc2WVjaax2tDdU8G2HlQzOHTfNagK0wauRV0QMrmj3WjHNB+sRSuK1gRwXfikHBM9IdTwNIpuJTV6n61nW9dtUq1QXFzXEhWEN4j13l7Y31 donkorvn@NCI-02134127-ML\n"
            },
            "metadata_fingerprint": "YvRKX9O52DM=",
            "metadata_startup_script": "          set -ex\n          cd /tmp\n          rm -rf bento-custodian || true\n          yum -y install epel-release\n          yum -y install wget git python-setuptools python-pip\n          pip install ansible==2.8.0 boto boto3 botocore\n          git clone https://github.com/CBIIT/bento-custodian\n          cd bento-custodian/ansible\n          ansible-playbook neo4j.yml -e env=\"dev\"\n          systemctl restart neo4j\n",
            "name": "ctdc-dev-database",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/networks/ctdc-network",
                "network_ip": "192.168.5.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/regions/us-east4/subnetworks/ctdc-us-east4-dev-db-network",
                "subnetwork_project": "ctdc-demo"
              }
            ],
            "project": "ctdc-demo",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/zones/us-east4-a/instances/ctdc-dev-database",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "db"
            ],
            "tags_fingerprint": "iLlpKeTIHqY=",
            "zone": "us-east4-a"
          },
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/ctdc-demo/global/networks/ctdc-network",
            "name": "ctdc-network",
            "project": "ctdc-demo",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/networks/ctdc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-08-23T22:25:24.587-07:00",
            "id": "projects/ctdc-demo/regions/us-east4/routers/ctdc-nat-router",
            "name": "ctdc-nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/networks/ctdc-network",
            "project": "ctdc-demo",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/regions/us-east4/routers/ctdc-nat-router"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "ctdc-demo/us-east4/ctdc-nat-router/ctdc-nat-gateway",
            "min_ports_per_vm": 0,
            "name": "ctdc-nat-gateway",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/ctdc-demo/regions/us-east4/addresses/db-network-nat-ip",
              "https://www.googleapis.com/compute/v1/projects/ctdc-demo/regions/us-east4/addresses/gke-network-nat-ip",
              "https://www.googleapis.com/compute/v1/projects/ctdc-demo/regions/us-east4/addresses/mgmt-network-nat-ip"
            ],
            "project": "ctdc-demo",
            "router": "ctdc-nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.nat_ips",
            "google_compute_network.vpc",
            "google_compute_router.router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "each": "map",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": "db-network",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-08-23T22:25:24.585-07:00",
            "gateway_address": "192.168.5.1",
            "id": "projects/ctdc-demo/regions/us-east4/subnetworks/ctdc-us-east4-dev-db-network",
            "ip_cidr_range": "192.168.5.0/28",
            "name": "ctdc-us-east4-dev-db-network",
            "network": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/networks/ctdc-network",
            "private_ip_google_access": true,
            "project": "ctdc-demo",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/regions/us-east4/subnetworks/ctdc-us-east4-dev-db-network"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        },
        {
          "index_key": "gke-network",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-08-23T22:25:24.595-07:00",
            "gateway_address": "10.10.0.1",
            "id": "projects/ctdc-demo/regions/us-east4/subnetworks/ctdc-us-east4-dev-gke-network",
            "ip_cidr_range": "10.10.0.0/16",
            "name": "ctdc-us-east4-dev-gke-network",
            "network": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/networks/ctdc-network",
            "private_ip_google_access": true,
            "project": "ctdc-demo",
            "region": "us-east4",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.121.44.0/22",
                "range_name": "gke-demo-dev-gke-services-9ad9ee10"
              },
              {
                "ip_cidr_range": "10.121.0.0/20",
                "range_name": "gke-demo-dev-gke-pods-9ad9ee10"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/regions/us-east4/subnetworks/ctdc-us-east4-dev-gke-network"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        },
        {
          "index_key": "mgmt-network",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-08-23T22:25:24.591-07:00",
            "gateway_address": "172.16.1.1",
            "id": "projects/ctdc-demo/regions/us-east4/subnetworks/ctdc-us-east4-dev-mgmt-network",
            "ip_cidr_range": "172.16.1.0/24",
            "name": "ctdc-us-east4-dev-mgmt-network",
            "network": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/global/networks/ctdc-network",
            "private_ip_google_access": true,
            "project": "ctdc-demo",
            "region": "us-east4",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ctdc-demo/regions/us-east4/subnetworks/ctdc-us-east4-dev-mgmt-network"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}